# ha-apps

./: .editorconfig  .gitattributes  .gitignore  .hadolint.yaml  .markdownlint.yaml  .shellcheckrc  .yamllint  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  SECURITY.md  devcontainer_bootstrap  repository.yaml
.agents/manifests/: repo.md
.agents/memory/: MEMORY.md  ai-harness-structure.md  app-terminology.md  ci-release-realign-incident.md  container-runtime-preference.md  deployment-facts.md  devcontainer-ha-boot.md  livekit-wakeword-addon.md  nemo-asr-cpp-chunk-size.md  nemo-asr-cpp-nemo-source.md  nemotron-asr-addon.md  parakeet-hotword-patch.md  prefer-upstream-over-fork.md  release-please-squash-gotcha.md  voiceprint-verification-plan.md  wakewordlab-addon.md
.agents/skills/: nemotron-asr.instructions.md  voiceprint.instructions.md
.agents/workflows/: app-dev-pr.md  app-promote-to-main.md  devcontainer-ha.sh  devcontainer.md  new-app-scaffold.md  ship-pr.md
.claude/: settings.json
.devcontainer/: README.md  devcontainer.json
.github/: .release-please-manifest-dev.json  .release-please-manifest.json  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml  labels.yml  release-please-config-dev.json  release-please-config.json
crw/: CHANGELOG.md  DOCS.md  README.md  config.yaml
livekit-wakeword/: AGENTS.md  CHANGELOG.md  DOCS.md  Dockerfile  NOTICE  README.md  apparmor.txt  config.yaml  pyproject.toml
livekit-wakeword/.agents/training/: SMOKE_RESULTS.md  bixby_prod.yaml  bixby_smoke.yaml
livekit-wakeword/rootfs/etc/s6-overlay/s6-rc.d/discovery/: run
livekit-wakeword/rootfs/etc/s6-overlay/s6-rc.d/livekit-wakeword/: finish  run
livekit-wakeword/translations/: en.yaml  ko.yaml
livekit-wakeword/wyoming_livekit_wakeword/: __init__.py  __main__.py  const.py  engine.py  handler.py  models.py
llm-conversation-agent/: AGENTS.md  CHANGELOG.md  DOCS.md  Dockerfile  README.md  apparmor.txt  config.yaml  pyproject.toml  smoke_test.py
llm-conversation-agent/rootfs/etc/s6-overlay/s6-rc.d/discovery/: run
llm-conversation-agent/rootfs/etc/s6-overlay/s6-rc.d/llm-agent/: finish  run
llm-conversation-agent/scripts/: probe_ha_mcp.py
llm-conversation-agent/translations/: en.yaml  ko.yaml
llm-conversation-agent/wyoming_llm_agent/: __init__.py  __main__.py  agent.py  const.py  embedding.py  handler.py  llm.py  mcp_client.py  mcp_listener.py  memory.py  metrics.py  metrics_http.py  preflight.py  sandbox.py  skill_fetcher.py  skills.py  workspace.py
nemo-asr-c/: AGENTS.md  CHANGELOG.md  DOCS.md  Dockerfile  README.md  config.yaml  pyproject.toml
nemo-asr-cpp/: AGENTS.md  CHANGELOG.md  DOCS.md  Dockerfile  README.md  apparmor.txt  config.yaml  pyproject.toml
nemo-asr-cpp/patches/: 0001-rnnt-hotword-biasing.patch
nemo-asr-cpp/rootfs/etc/s6-overlay/s6-rc.d/discovery/: run
nemo-asr-cpp/rootfs/etc/s6-overlay/s6-rc.d/nemo-asr-cpp/: finish  run
nemo-asr-cpp/translations/: en.yaml  ko.yaml
nemo-asr-cpp/wyoming_nemo_asr_cpp/: __init__.py  __main__.py  const.py  engine.py  handler.py  models.py  tokenizer.py
nemotron-asr/: AGENTS.md  CHANGELOG.md  DOCS.md  Dockerfile  NOTICE  README.md  config.yaml  pyproject.toml
nemotron-asr-c/: AGENTS.md  CHANGELOG.md  DOCS.md  Dockerfile  README.md  apparmor.txt  config.yaml  pyproject.toml
nemotron-asr-c/patches/: 0001-shared-lib.patch  0002-set-att-right.patch
nemotron-asr-c/rootfs/etc/s6-overlay/s6-rc.d/discovery/: run
nemotron-asr-c/rootfs/etc/s6-overlay/s6-rc.d/nemotron-asr-c/: down  finish  run
nemotron-asr-c/specs/: hotword-boost.md  true-streaming.md
nemotron-asr-c/tests/: test_engine.py
nemotron-asr-c/tools/: convert_nemo.py
nemotron-asr-c/translations/: en.yaml  ko.yaml
nemotron-asr-c/wyoming_nemotron_asr_c/: __init__.py  __main__.py  const.py  engine.py  enhancer.py  handler.py  models.py
nemotron-asr/rootfs/etc/s6-overlay/s6-rc.d/discovery/: run
nemotron-asr/rootfs/etc/s6-overlay/s6-rc.d/nemotron-asr/: run
nemotron-asr/translations/: en.yaml  ko.yaml
nemotron-asr/wyoming_nemotron_asr/: __init__.py  __main__.py  const.py  diag.py  engine.py  featurizer.py  handler.py  models.py
otelcol/: AGENTS.md  CHANGELOG.md  DOCS.md  Dockerfile  README.md  SPEC.md  apparmor.txt  config.yaml
playwright/: CHANGELOG.md  DOCS.md  README.md  config.yaml
registry-cache/: CHANGELOG.md  DOCS.md  README.md  apparmor.txt  config.yaml
rethink/: .gitignore  AGENTS.md  CHANGELOG.md  DOCS.md  Dockerfile  README.md  config.yaml
scripts/: devcontainer-ha.sh
supertonic/: .gitignore  AGENTS.md  CHANGELOG.md  DOCS.md  Dockerfile  NOTICE  README.md  apparmor.txt  build.yaml  config.yaml  pyproject.toml
supertonic/.agents/: 2.0.0-mnn-migration.md  text-normalization.md
supertonic/rootfs/etc/s6-overlay/s6-rc.d/discovery/: run
supertonic/rootfs/etc/s6-overlay/s6-rc.d/supertonic/: finish  run
supertonic/tests/: test_normalize.py
supertonic/translations/: en.yaml  ko.yaml
supertonic/wyoming_supertonic/: __init__.py  __main__.py  const.py  engine.py  handler.py  normalize.py
transcribe-cpp/: CHANGELOG.md  DOCS.md  README.md  apparmor.txt  config.yaml
voiceprint/: AGENTS.md  CHANGELOG.md  DOCS.md  Dockerfile  README.md  apparmor.txt  config.yaml  pyproject.toml
voiceprint/.agents/runtime-experiment/: RECIPE.md  checksum.txt
voiceprint/.agents/smoke/: SMOKE_RESULTS.md  client_test.py  dummy_stt.py
voiceprint/.agents/smoke/data/: options.json
voiceprint/rootfs/etc/s6-overlay/s6-rc.d/discovery/: run
voiceprint/rootfs/etc/s6-overlay/s6-rc.d/voiceprint/: finish  run
voiceprint/translations/: en.yaml  ko.yaml
voiceprint/wyoming_voiceprint/: __init__.py  __main__.py  const.py  embedder.py  enroll.py  handler.py  models.py
wardrowbe/: .gitignore  AGENTS.md  CHANGELOG.md  DOCS.md  Dockerfile  NOTICE  README.md  apparmor.txt  build.yaml  config.yaml  libfakeeuid.c  switch-user.c
zensical/: .gitignore  AGENTS.md  CHANGELOG.md  DOCS.md  Dockerfile  README.md  apparmor.txt  build.yaml  config.yaml  requirements.txt
(+103 files in other folders)
