[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wyoming-livekit-wakeword"
version = "0.10.1"
description = "Wyoming wake word server on the livekit-wakeword runtime (ha-livekit-wakeword add-on bridge)"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "livekit-wakeword>=0.2,<0.3",
    "wyoming>=1.8,<2",
    "numpy>=1.24",
]

[tool.setuptools]
packages = ["wyoming_livekit_wakeword"]
