[project]
name = "wyoming_nemo_asr_c"
version = "0.9.1"
description = "Wyoming bridge for nemotron-asr-streaming.c (pure-C Nemotron ASR)"
requires-python = ">=3.11"
dependencies = [
    "wyoming>=1.9,<2",
    "huggingface_hub",
    "numpy",
    "torch",
    "pyyaml",
]
license = {text = "Apache-2.0"}
